myhome/src/objects/Candidate__c.object
<CustomObject>
    <description>Represents an applicant who might apply for one or more positions.</description>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Employer__c</fullName>
        <label>Current Employer</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currently_Employed__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Currently Employed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Education__c</fullName>
        <label>Education</label>
        <picklist>
            <picklistValues>
                <fullName>BA/BS</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>HS diploma</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA/MS/MBA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ph.D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post Doc</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <externalId>true</externalId>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <externalId>true</externalId>
        <label>First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <externalId>true</externalId>
        <label>Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <label>Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>SSN__c</fullName>
        <label>SSN</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_province__c</fullName>
        <label>State/province</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Us_Citizen__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Us Citizen</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Visa_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Visa Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Years_of_experience__c</fullName>
        <label>Years of experience</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zip_Postal_code__c</fullName>
        <label>Zip/Postal code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <label>Candidate</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>C-{00000}</displayFormat>
        <label>Candidate Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Candidates</pluralLabel>
    <recordTypes>
        <fullName>Non_software_engineer</fullName>
        <active>true</active>
        <description>this  is for not software engineer</description>
        <label>Non software engineer</label>
    </recordTypes>
    <recordTypes>
        <fullName>software_candiates</fullName>
        <active>true</active>
        <description>this record type is for only software candiates</description>
        <label>software candiates</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>